// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImportExportTab import result details > matches baseline snapshot for import result state 1`] = `
<div
  class="flex items-start gap-3 rounded-lg border p-3 border-warn/30 bg-warn/10"
  data-ds-component="Alert"
  data-testid="flashcards-import-last-result"
  role="alert"
>
  <span
    aria-hidden="true"
    class="mt-0.5 flex-shrink-0 text-warn"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-triangle-alert size-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
      />
      <path
        d="M12 9v4"
      />
      <path
        d="M12 17h.01"
      />
    </svg>
  </span>
  <div
    class="min-w-0 flex-1"
  >
    <p
      class="text-sm font-medium text-warn"
    >
      Last import: 2 imported, 1 skipped
    </p>
    <div
      class="text-sm text-warn mt-1"
    >
      <div
        class="mt-1 space-y-1 text-xs"
      >
        <div
          class="space-y-1"
        >
          <div>
            <span
              class="ant-typography css-dev-only-do-not-override-3uaqrl css-var-root"
            >
              <code>
                Line 9
              </code>
            </span>
            <span
              class="ant-typography ml-2 css-dev-only-do-not-override-3uaqrl css-var-root"
            >
              Missing required field: Front
            </span>
          </div>
          <div
            class="flex flex-wrap items-center gap-2 pl-1"
          >
            <span
              class="ant-typography ant-typography-secondary block css-dev-only-do-not-override-3uaqrl css-var-root"
            >
              Add a non-empty Front value on that row, or map your header to the Front column.
            </span>
            <button
              class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-link ant-btn-color-link ant-btn-variant-link ant-btn-sm !h-auto !p-0 text-xs"
              data-testid="flashcards-import-error-help-0"
              type="button"
            >
              <span>
                View format help
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ImportExportTab import result details > matches baseline snapshot for import result state 2`] = `
<div
  data-testid="flashcards-transfer-summary-formats"
>
  <span
    class="ant-typography block css-dev-only-do-not-override-3uaqrl css-var-root"
  >
    <strong>
      Supported formats
    </strong>
  </span>
  <span
    class="ant-typography ant-typography-secondary css-dev-only-do-not-override-3uaqrl css-var-root"
  >
    Import: CSV, TSV, JSON, JSONL, Structured Q&A, APKG · Author: Generate, Image Occlusion · Export: TSV, CSV, JSON, APKG
  </span>
</div>
`;

exports[`ImportExportTab import result details > matches baseline snapshot for import result state 3`] = `
<div
  data-testid="flashcards-transfer-summary-limits"
>
  <span
    class="ant-typography block css-dev-only-do-not-override-3uaqrl css-var-root"
  >
    <strong>
      Current import limits
    </strong>
  </span>
  <span
    class="ant-typography ant-typography-secondary css-dev-only-do-not-override-3uaqrl css-var-root"
  >
    Limits unavailable
  </span>
</div>
`;
